# landerox.github.io

./: .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cspell.json  error.html  index.html  index_backup.html  pyproject.toml  script.js  style.css  vscode-extensions.txt  zensical.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: deploy.yml  lint.yml
docs/: index.md
docs/assets/stylesheets/: extra.css
docs/blog/: index.md
docs/blog/posts/: 2025-12-07-my-engineering-setup.md
docs/projects/: index.md
docs/radar/: ai-mlops-rag.md  data-stack.md  devops-iac.md  gcp-architecture.md  index.md  learning.md  productivity-cli.md  productivity.md  python-ecosystem.md  quality-security.md  rust-ecosystem.md  rust-python.md  security-quality.md
docs/resume/: index.md  technical-skills.md
