[project]
name = "website"
version = "1.0.0"
description = "Personal portfolio and engineering blog showcasing cloud architecture patterns and open source projects."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Fernando Landero", email = "landerox@gmail.com" }]
keywords = ["blog", "portfolio", "documentation", "cloud-architecture"]
dependencies = ["zensical>=0.0.11"]

[dependency-groups]
dev = ["pre-commit>=4.5.0", "commitizen>=4.10.0"]

[project.urls]
Homepage = "https://landerox.github.io"
Repository = "https://github.com/landerox/landerox.github.io"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_files = ["pyproject.toml:^version"]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
