[project]
name = "website"
version = "1.0.0"
description = "Personal portfolio and engineering blog showcasing cloud architecture patterns and open source projects."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Fernando Landero", email = "landerox@gmail.com" }]
keywords = ["blog", "portfolio", "documentation", "cloud-architecture"]
dependencies = ["zensical>=0.0.11"]

[dependency-groups]
dev = [
  "ruff>=0.14.8",
  "pyright>=1.1.407",
  "pre-commit>=4.5.0",
  "commitizen>=4.10.0",
]

[project.urls]
Homepage = "https://landerox.github.io"
Repository = "https://github.com/landerox/landerox.github.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.hatch.build.targets.wheel]
packages = []

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_files = ["pyproject.toml:^version"]
update_changelog_on_bump = false
changelog_file = "CHANGELOG.md"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
  "PTH", # flake8-use-pathlib
  "ERA", # eradicate
  "PL",  # pylint
  "RUF", # ruff-specific
]
ignore = [
  "E501",    # line too long (formatter handles this)
  "PLR0913", # too many arguments
  "PLR2004", # magic value comparison
]

[tool.ruff.lint.isort]
known-first-party = []
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
